[gd_scene load_steps=12 format=3 uid="uid://030bnjlhtna5"]

[ext_resource type="Script" path="res://Scenes/Zombies/zombie_template.gd" id="1_3furn"]
[ext_resource type="Script" path="res://StateMachine/state_machine.gd" id="1_uj3q6"]
[ext_resource type="Script" path="res://Scenes/Zombies/States/stop.gd" id="2_ljrm5"]
[ext_resource type="Script" path="res://Scenes/Zombies/States/move.gd" id="3_mb3f6"]
[ext_resource type="Script" path="res://Scenes/Zombies/States/eat.gd" id="4_ntasb"]
[ext_resource type="Script" path="res://Scenes/Zombies/States/not_head_move.gd" id="5_qwm3w"]
[ext_resource type="Script" path="res://Scenes/Zombies/States/not_head_eat.gd" id="6_fsn8x"]
[ext_resource type="Script" path="res://Scenes/Zombies/States/dead.gd" id="7_ljwfu"]
[ext_resource type="PackedScene" uid="uid://5o5bkay5yfx4" path="res://Scenes/Components/attack_component.tscn" id="9_1wg3g"]
[ext_resource type="PackedScene" uid="uid://cblnkacdgfp7e" path="res://Scenes/Components/health_components.tscn" id="10_s2mye"]

[sub_resource type="SpriteFrames" id="SpriteFrames_i8uhq"]
animations = [{
"frames": [],
"loop": true,
"name": &"Dead",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"Eat",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"Move",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"NotHeadEat",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"NotHeadMove",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"Stop",
"speed": 5.0
}]

[node name="ZombieTemplate" type="AnimatedSprite2D"]
sprite_frames = SubResource("SpriteFrames_i8uhq")
animation = &"Dead"
script = ExtResource("1_3furn")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("init_state")]
script = ExtResource("1_uj3q6")
init_state = NodePath("Move")

[node name="Stop" type="Node" parent="StateMachine"]
script = ExtResource("2_ljrm5")

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource("3_mb3f6")

[node name="Eat" type="Node" parent="StateMachine"]
script = ExtResource("4_ntasb")

[node name="NotHeadMove" type="Node" parent="StateMachine"]
script = ExtResource("5_qwm3w")

[node name="NotHeadEat" type="Node" parent="StateMachine"]
script = ExtResource("6_fsn8x")

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource("7_ljwfu")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(9, 17)
target_position = Vector2(-16, 0)
collision_mask = 2
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="AttackComponent" parent="." instance=ExtResource("9_1wg3g")]

[node name="HealthComponents" parent="." instance=ExtResource("10_s2mye")]
